--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,17 +7,17 @@ on:
 
 jobs:
   release:
-    name: Release binaries
+    name: Build and release binaries
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.22
+          go-version: '1.22'
 
       - name: Cache Go modules
         uses: actions/cache@v3
@@ -28,11 +28,10 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: Install GoReleaser
-        uses: goreleaser/goreleaser-action@v4
-        with:
-          version: latest
+        run: go install github.com/goreleaser/goreleaser@latest
 
       - name: Run GoReleaser
-        run: goreleaser release
+        if: startsWith(github.ref, 'refs/tags/')
+        run: goreleaser release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
