--- a/,goreleaser.yml
+++ b/,goreleaser.yml
@@ -11,6 +11,7 @@ builds:
       - CGO_ENABLED=0
     goos:
       - linux
+      - darwin
     goarch:
       - amd64
       - arm64
@@ -24,17 +25,17 @@ archives:
     format: tar.gz
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
 
+checksum:
+  name_template: "{{ .ProjectName }}_{{ .Version }}_checksums.txt"
+
 release:
   github:
     owner: s0up4200
     name: sizechecker
 
-checksum:
-  name_template: "{{ .ProjectName }}_{{ .Version }}_checksums.txt"
-
 changelog:
-  sort: asc
   use: github
+  sort: asc
   filters:
     exclude:
       - Merge pull request
